--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">Pipeline não DevOps - Felipe Govoni</div>
+	<div class="alert">Pipeline DevOps - Felipe Govoni</div>
 	
 	<div class="container">
 		<div class="logo">
